# mlops

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.airflow  Dockerfile.model  Dockerfile.watcher  README.md  README_library.md  docker-compose.yml  env.dev.example  pyproject.toml  pytest.ini  requirements-airflow.txt  requirements.txt
airflow/: airflow_local_settings.py
airflow/dags/: dag_data_predictions.py  dag_data_predictions_wine.py  dag_inference.py  dag_inference_wine.py  dag_mlflow_autoserve.py  dag_model_monitoring.py  dag_training.py  dag_training_wine.py
docs/: ARCHITECTURE.md  ARCHITECTURE_RU.md  DEMO.md  SCRIPTS.md
monitoring/blackbox/: blackbox.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
notebook/: 00_credit_data_031025.ipynb  01_preprocessing_081025.ipynb  02_preprocessing_get_customer_id.ipynb  02_preprocessing_get_subscribtions.ipynb  03_get_featches_stories.ipynb  03_get_featches_stories_v2.ipynb  04_modeling_lstm.ipynb  05_modeling_tcn.ipynb  06_modeling_catboost_exp.ipynb  07_mlflow_catboost.ipynb  08_fin_analitics.ipynb  09_airflow_predict.ipynb  10_back_test_api.ipynb  11_demo_wine_via_ui.ipynb
scripts/: bootstrap_demo.sh  predict_request.py
src/: __init__.py  app.py  base_models.py  calibrate_model.py  config.py  database.py  logger.py  modeling.py  modeling_lstm.py  predprocessing.py  predprocessing_lstm.py  visualization.py
test/: conftest.py  test_api.py  test_autoserve_utils.py  test_integration_health.py  test_mlflow.py
(+26 files in other folders)
